--- a/Setup_Files/Requirements.txt
+++ b/Setup_Files/Requirements.txt
@@ -1,6 +1,88 @@
-pandas
-scikit-learn
-dash 
-plotly.express
-plotly.graph_objects
-dash-tools
+attrs==23.2.0
+blinker==1.7.0
+certifi==2024.2.2
+cfgv==3.4.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+contourpy==1.2.1
+cycler==0.12.1
+dash==2.16.1
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-iconify==0.1.2
+dash-mantine-components==0.12.0
+dash-table==5.0.0
+dash-tools==1.12.0
+distlib==0.3.8
+docopt==0.6.2
+filelock==3.13.4
+Flask==3.0.3
+fonttools==4.51.0
+gunicorn==22.0.0
+identify==2.5.36
+idna==3.7
+imageio==2.34.1
+importlib_metadata==7.1.0
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.3
+joblib==1.4.0
+kiwisolver==1.4.5
+lazy_loader==0.4
+lime==0.2.0.1
+llvmlite==0.42.0
+MarkupSafe==2.1.5
+matplotlib==3.8.4
+memory-profiler==0.61.0
+nest-asyncio==1.6.0
+networkx==3.3
+nodeenv==1.8.0
+numba==0.59.1
+numpy==1.26.4
+packaging==21.3
+pandas==2.2.2
+patsy==0.5.6
+pillow==10.3.0
+pipreqs==0.4.12
+platformdirs==4.2.1
+plotly==5.21.0
+plotly-express==0.4.1
+pluggy==1.5.0
+pre-commit==2.16.0
+psutil==5.9.8
+py==1.11.0
+pyparsing==3.1.2
+pytest==6.2.5
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+retrying==1.3.4
+ruamel.yaml==0.17.21
+scikit-image==0.23.2
+scikit-learn==1.4.2
+scipy==1.13.0
+seaborn==0.13.2
+shap==0.45.0
+six==1.16.0
+slicer==0.0.7
+snakeviz==2.2.0
+statsmodels==0.14.2
+tenacity==8.2.3
+termcolor==1.1.0
+threadpoolctl==3.4.0
+tifffile==2024.5.3
+toml==0.10.2
+tornado==6.4
+tqdm==4.66.4
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+virtualenv==20.26.0
+visdcc==0.0.50
+Werkzeug==3.0.2
+yarg==0.1.9
+yolk3k==0.9
+zipp==3.18.1
